updated why grass turns yellow

--- a/lawn-basics/why-grass-turns-yellow.html
+++ b/lawn-basics/why-grass-turns-yellow.html
@@ -5,27 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Grass Turns Yellow</title>
-  <meta name="description" content="Grass turns yellow when physiological stress reduces chlorophyll production, often caused by water imbalance, nutrient disruption, soil limits, or growth slowdown.">
+  <meta name="description" content="Yellow grass usually develops gradually, not overnight. The timing and pattern help explain what the lawn is reacting to.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-turns-yellow.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Why Grass Turns Yellow">
-  <meta property="og:description" content="Grass turns yellow when physiological stress reduces chlorophyll production, often caused by water imbalance, nutrient disruption, soil limits, or growth slowdown.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-turns-yellow.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Why Grass Turns Yellow">
+  <meta name="twitter:description" content="Yellow grass usually develops gradually, not overnight. The timing and pattern help explain what the lawn is reacting to.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="Why Grass Turns Yellow">
+  <meta property="og:description" content="Yellow grass usually develops gradually, not overnight. The timing and pattern help explain what the lawn is reacting to.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-turns-yellow.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -40,76 +45,34 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <!-- On-site search (autocomplete; never leaves your site) -->
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>Why Grass Turns Yellow</h1>
 
-<h2>What yellow grass actually indicates</h2>
-<p>Yellowing in grass is a visible signal that normal photosynthesis is being disrupted. The green color of turf comes from chlorophyll, a pigment that allows grass to convert light into usable energy. When chlorophyll production slows or existing chlorophyll breaks down faster than it is replaced, blades lose their green color and appear pale or yellow.</p>
-<p>This color change does not identify a single problem. It indicates that the plant is under stress and reallocating resources away from leaf pigmentation toward survival functions. Grass can remain alive and structurally intact while appearing yellow, which is why color change often precedes thinning or dieback.</p>
-<p>Yellow grass should be interpreted as a warning signal rather than a diagnosis. Understanding the underlying biological stress is necessary before any corrective action makes sense.</p>
+<h2>How yellowing usually shows up</h2>
+<p>Grass rarely turns yellow all at once. It usually starts as a lighter green that’s easy to miss, then slowly shifts toward yellow in certain areas. Most homeowners notice it first when the lawn stops looking full and rich.</p>
+<p>The pattern matters more than the color itself. Where yellowing begins often points to what the lawn is struggling with.</p>
 
-<h2>Water stress and root respiration</h2>
-<p>Both insufficient and excessive water interfere with chlorophyll production through different mechanisms. When soil moisture is too low, roots cannot absorb enough water to transport nutrients upward, slowing photosynthesis. Cells lose turgor pressure, and the plant conserves energy by reducing pigment production.</p>
-<p>Excess water causes a different failure. Saturated soil fills air spaces with water, reducing oxygen availability around roots. Grass roots rely on oxygen for respiration, and without it, energy production drops. Nutrient uptake becomes inefficient even when nutrients are present.</p>
-<p>In both cases, chlorophyll synthesis slows because the plant lacks either the raw materials or the energy needed to maintain normal leaf color.</p>
+<h2>Why yellow is different from brown</h2>
+<p>Yellow grass is often caught in between healthy and failing. It hasn’t fully shut down, but it isn’t growing the way it should either. This stage can linger for weeks.</p>
+<p>Because the lawn still looks partly alive, people often delay making changes. That delay allows the issue to settle in instead of clearing up.</p>
 
-<h2>Nutrient imbalance and chlorophyll synthesis</h2>
-<p>Nitrogen is a core component of chlorophyll molecules. When nitrogen availability drops, grass cannot maintain green pigmentation even if growth continues at a reduced pace. This often produces uniform yellowing across large areas.</p>
-<p>Excess nutrients can also cause yellowing by interfering with uptake balance. High salt concentrations or nutrient antagonism can block root absorption of key elements, producing deficiency symptoms despite adequate soil levels.</p>
-<p>The result is impaired chlorophyll production rather than immediate tissue death, which explains why yellow grass often remains upright and intact.</p>
+<h2>How equipment choices can play a role</h2>
+<p>The way a lawn is maintained affects how evenly it stays green. Repeated heavy cutting or rushed work can stress grass without obvious damage at first. Over time, that stress shows up as yellowing.</p>
+<p>Tool choice and use matter more than people expect. <a href="tools-safety/difference-between-manual-and-powered-tools.html">Difference Between Manual and Powered Tools</a> explains how maintenance habits influence lawn condition.</p>
 
-<h2>Soil compaction and gas exchange limits</h2>
-<p>Compacted soil restricts root depth and reduces pore space needed for oxygen and water movement. Shallow, oxygen-starved roots cannot supply enough resources to support full chlorophyll production.</p>
-<p>Water infiltration slows in compacted areas, increasing both drought stress and waterlogging depending on conditions. These swings compound stress and destabilize pigment production.</p>
-<p>Yellowing in compacted zones often appears persistent because the underlying physical limitation does not resolve on its own.</p>
+<h2>Why drought often leaves yellow behind</h2>
+<p>After a dry stretch, lawns frequently come back uneven. Some areas recover quickly while others remain yellow for a long time. This uneven response makes the lawn look sick even after watering resumes.</p>
+<p>Recovery depends on how deeply the lawn was affected. <a href="can-grass-recover-after-drought.html">Can Grass Recover After Drought</a> explains why yellow patches can linger long after rain returns.</p>
 
-<h2>Seasonal dormancy versus stress response</h2>
-<p>Grass growth is regulated by temperature thresholds. When conditions fall outside the active growth range, chlorophyll production naturally declines. This is common during extreme heat or cold.</p>
-<p>Seasonal yellowing differs from damage because the plant is intentionally slowing metabolism rather than failing. Once temperatures return to favorable ranges, pigment production resumes.</p>
-<p>Stress-induced yellowing occurs when conditions are marginal but not extreme, often leading to prolonged discoloration.</p>
+<h2>Why yellowing spreads instead of staying put</h2>
+<p>Once yellowing starts, it often expands outward instead of staying contained. Areas around the original spot begin fading as well. This spread makes the problem feel sudden even though it built up slowly.</p>
+<p>Ignoring early yellowing usually leads to larger areas needing attention later.</p>
 
-<h2>Mowing stress and carbohydrate loss</h2>
-<p>Leaf tissue is the site of carbohydrate production. Removing too much leaf area at once reduces energy generation, forcing the plant to prioritize regrowth over pigmentation.</p>
-<p>Repeated heavy mowing depletes stored carbohydrates, limiting chlorophyll synthesis and slowing color recovery.</p>
-<p>Yellowing from mowing stress typically appears shortly after cutting and intensifies with repeated scalping.</p>
-
-<h2>Pest and disease pressure</h2>
-<p>Root-feeding pests reduce water and nutrient transport, indirectly limiting chlorophyll production. Foliar diseases disrupt photosynthesis directly by damaging leaf tissue.</p>
-<p>Yellowing often appears before visible thinning or patch formation because pigment loss precedes structural collapse.</p>
-<p>Patterns associated with pests or disease tend to expand outward as damage progresses.</p>
-
-<h2>How causes can be distinguished</h2>
-<p>Uniform yellowing across large areas often points to nutrient or water balance issues. Patchy or expanding discoloration suggests root damage or localized soil problems.</p>
-<p>Timing relative to weather changes, mowing events, or irrigation adjustments provides context for identifying the dominant stress.</p>
-<p>Color change alone is insufficient; recent environmental changes usually reveal the cause.</p>
-
-<h2>Recovery timelines and limits</h2>
-<p>Water and nutrient-related yellowing often reverses within weeks once conditions stabilize. Compaction-related discoloration persists longer because root systems recover slowly.</p>
-<p>Seasonal yellowing resolves when growth resumes naturally. Pest and disease damage depends on severity and duration.</p>
-<p>Color recovery lags behind physiological recovery, which is why patience is often required.</p>
-
-<h2>Conclusion</h2>
-<p>Yellow grass is usually stressed rather than dead. The plant is conserving energy in response to unfavorable conditions.</p>
-<p>Correcting the underlying cause restores normal chlorophyll production over time. Applying products without understanding the stress mechanism often delays recovery instead of improving it.</p>
+<h2>What steady care changes over time</h2>
+<p>Lawns that stay green longer tend to be managed gently and consistently. They aren’t pushed hard during stressful periods and aren’t overcorrected when problems appear. That balance keeps color more stable.</p>
+<p>Yellowing doesn’t always signal failure. It’s often the lawn asking for adjustment before things get worse.</p>
   </main>
 
   <footer class="site-footer">
@@ -117,12 +80,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
