updated patchy grass

--- a/lawn-basics/how-to-fix-patchy-grass.html
+++ b/lawn-basics/how-to-fix-patchy-grass.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How to Fix Patchy Grass</title>
-  <meta name="description" content="Patchy grass develops gradually and usually has more than one cause. Fixing it starts with noticing patterns instead of reacting randomly.">
+  <meta name="description" content="Patchy grass forms over time as conditions repeat. Fixing it means understanding why certain areas fall behind while others stay full.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-to-fix-patchy-grass.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="How to Fix Patchy Grass">
-  <meta name="twitter:description" content="Patchy grass develops gradually and usually has more than one cause. Fixing it starts with noticing patterns instead of reacting randomly.">
+  <meta name="twitter:description" content="Patchy grass forms over time as conditions repeat. Fixing it means understanding why certain areas fall behind while others stay full.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
   <meta property="og:image:width" content="1200">
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How to Fix Patchy Grass">
-  <meta property="og:description" content="Patchy grass develops gradually and usually has more than one cause. Fixing it starts with noticing patterns instead of reacting randomly.">
+  <meta property="og:description" content="Patchy grass forms over time as conditions repeat. Fixing it means understanding why certain areas fall behind while others stay full.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-to-fix-patchy-grass.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
 
@@ -51,28 +51,28 @@
     <h1>How to Fix Patchy Grass</h1>
 
 <h2>How patchy grass usually develops</h2>
-<p>Patchy grass rarely appears all at once. It usually starts with small thin areas that seem harmless at first, then slowly expand over time. Many homeowners don’t notice until the lawn starts looking uneven from a distance.</p>
-<p>These patches are usually repeating the same story every season. The lawn is reacting to ongoing conditions rather than a single bad week.</p>
+<p>Patchy grass almost never appears suddenly. It develops when the same areas struggle repeatedly while the rest of the lawn keeps up. At first this shows up as slight thinning or slower growth that blends in unless you’re looking for it.</p>
+<p>As those conditions repeat, the thin areas lose their ability to recover between cuts. What starts as a cosmetic issue slowly becomes a visible pattern that spreads season after season.</p>
 
 <h2>Why some patches improve on their own</h2>
-<p>Not every bare or thin spot needs immediate repair. Some areas fill back in naturally once conditions improve or pressure is removed. The lawn has a limited ability to correct itself.</p>
-<p>Knowing when to wait prevents unnecessary work. <a href="can-grass-heal-itself.html">Can Grass Heal Itself</a> explains when recovery happens without intervention.</p>
+<p>Not every thin spot is permanent. Some areas fall behind temporarily because of short-term stress and recover once that pressure eases. This is most common when traffic shifts, shade changes, or mowing height is corrected.</p>
+<p>Understanding which patches are capable of filling back in prevents unnecessary disruption. In many cases, the lawn’s ability to correct itself depends on how long the issue has been present, as described in <a href="can-grass-heal-itself.html">Can Grass Heal Itself</a>.</p>
 
 <h2>How foot traffic and use create patterns</h2>
-<p>Patchy areas often line up with how the yard is used. Walk paths, play areas, and places where equipment turns tend to thin out first. Over time, these spots stop keeping up with the rest of the lawn.</p>
-<p>Without changing how the space is used, patches return even after repair.</p>
+<p>Patchy growth often follows how the yard is used rather than how it’s maintained. Repeated walking paths, play areas, and equipment turns compress the same ground over and over. Grass in these spots falls behind even when watering and mowing stay consistent.</p>
+<p>Unless traffic patterns change, repairs in these areas rarely hold. The grass isn’t failing randomly; it’s responding to constant pressure.</p>
 
 <h2>Why flattened grass turns into bare spots</h2>
-<p>Grass that stays pressed down for long periods struggles to stay thick. Rain, furniture, or repeated activity can keep blades from standing back up. Those flattened areas slowly lose coverage.</p>
-<p>Fixing the flattening prevents patches from forming again. <a href="how-to-fix-flattened-grass.html">How to Fix Flattened Grass</a> shows how to reset those areas.</p>
+<p>Grass that stays pressed down for long stretches gradually loses coverage. Rain, furniture, or repeated use keeps blades from standing upright long enough to recover. Over time, those areas thin until soil becomes visible.</p>
+<p>Addressing the flattening itself is what prevents repeat patching. Techniques outlined in <a href="how-to-fix-flattened-grass.html">How to Fix Flattened Grass</a> help reset those areas so growth can resume evenly.</p>
 
 <h2>Why shallow roots lead to uneven coverage</h2>
-<p>Patchy lawns often have uneven rooting beneath the surface. Some areas hold on better during stress, while others give up quickly. This difference shows up as thin or bare spots.</p>
-<p>Understanding how deep grass anchors itself explains why some patches never recover fully. <a href="how-deep-grass-roots-really-go.html">How Deep Grass Roots Really Go</a> explains this variation.</p>
+<p>Patchy lawns often reflect what’s happening below the surface. Areas with shallow anchoring give up faster during stress, while nearby sections remain stable. This difference creates uneven coverage even under the same care.</p>
+<p>Once grass loses its ability to stay anchored, recovery slows dramatically. That relationship is explored further in <a href="how-deep-grass-roots-really-go.html">How Deep Grass Roots Really Go</a>.</p>
 
 <h2>What actually improves patchy lawns</h2>
-<p>Lasting improvement comes from correcting the conditions that created the patches. Adjusting mowing height, traffic, and recovery time helps more than quick fixes. The lawn responds slowly but steadily.</p>
-<p>Patchy grass improves when the yard is allowed to grow evenly again instead of being constantly corrected.</p>
+<p>Lasting improvement comes from removing the conditions that caused the patches to form. Raising mowing height, allowing recovery time, and reducing repeated pressure give the lawn room to even out again. Quick fixes without those changes rarely last.</p>
+<p>Patchy grass improves when the yard is allowed to stabilize instead of being constantly corrected. The goal isn’t perfection, but restoring balance so thin areas stop falling behind.</p>
   </main>
 
   <footer class="site-footer">
