--- a/index.html
+++ b/index.html
@@ -12,11 +12,22 @@
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="GrizzlyGreens">
+  <meta name="twitter:description" content="Practical lawn, weed, irrigation, soil, and yard safety guides.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
+  <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
+
+  <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="GrizzlyGreens">
   <meta property="og:description" content="Practical lawn, weed, irrigation, soil, and yard safety guides.">
   <meta property="og:url" content="https://grizzlygreens.net/">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Default preview image for GrizzlyGreens.net">
 
   <!-- Google tag -->
   <!-- Google tag (gtag.js) -->
