--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <main class="container">
     <section class="hero">
-  <h1>GrizzlyGreens</h1>
+  <h1>Welcome to Grizzly Greens</h1>
   <p class="subtitle">Fast, practical lawn and yard knowledge. No fluff.</p>
 </section>
 <section class="cards">
