updated soil page

--- a/soil-fertilizer/what-lawn-soil-actually-is.html
+++ b/soil-fertilizer/what-lawn-soil-actually-is.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>What Lawn Soil Actually Is</title>
-  <meta name="description" content="Lawn soil is a living structural system that controls water movement, oxygen exchange, nutrient storage, and root survival long before fertilizer matters.">
+  <meta name="description" content="Lawn soil is the system that determines whether grass can survive at all. When soil structure fails, every surface fix becomes temporary.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/what-lawn-soil-actually-is.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="What Lawn Soil Actually Is">
-  <meta name="twitter:description" content="Lawn soil is a living structural system that controls water movement, oxygen exchange, nutrient storage, and root survival long before fertilizer matters.">
+  <meta name="twitter:description" content="Lawn soil is the system that determines whether grass can survive at all. When soil structure fails, every surface fix becomes temporary.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="What Lawn Soil Actually Is">
-  <meta property="og:description" content="Lawn soil is a living structural system that controls water movement, oxygen exchange, nutrient storage, and root survival long before fertilizer matters.">
+  <meta property="og:description" content="Lawn soil is the system that determines whether grass can survive at all. When soil structure fails, every surface fix becomes temporary.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/what-lawn-soil-actually-is.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,41 +56,41 @@
   <main class="container">
     <h1>What Lawn Soil Actually Is</h1>
 
-<h2>Lawn soil is a physical system first</h2>
-<p>Lawn soil is not dirt and it is not fertilizer. It is a physical structure made of mineral particles, pore space, water, air, and biological activity.</p>
-<p>That structure determines whether roots can breathe, grow, and access resources.</p>
+<h2>Lawn soil is the system that decides everything</h2>
+<p>Grass does not fail because of weather, watering mistakes, or fertilizer choices. It fails because the soil underneath it stops functioning as a system. Soil is not dirt and it is not a nutrient container. It is the structure that determines whether roots can exist, breathe, and regenerate at all.</p>
+<p>When that structure breaks, every surface fix becomes temporary.</p>
 
-<h2>Soil controls water before grass ever sees it</h2>
-<p>Water does not belong to grass until soil allows it to move, pause, and drain correctly. Soil texture and structure decide whether water infiltrates, runs off, or suffocates roots.</p>
-<p>This is why watering alone cannot fix failing lawns.</p>
+<h2>Water belongs to soil before it ever reaches grass</h2>
+<p>Grass never receives water directly. Soil decides whether water infiltrates, pools, drains, or disappears. If soil cannot move and hold water correctly, irrigation either runs off, suffocates roots, or evaporates without benefit.</p>
+<p>This is why lawns fail even when watering schedules are technically correct.</p>
 
-<h2>Oxygen availability is the hidden limiter</h2>
-<p>Roots require oxygen to function. When soil pores collapse or stay waterlogged, oxygen exchange stops and roots weaken even in moist ground.</p>
-<p>Most lawn failures start with oxygen loss, not thirst.</p>
+<h2>Oxygen is the first resource grass loses</h2>
+<p>Roots do not die from thirst first. They die from oxygen starvation. When pore space collapses or soil remains saturated, oxygen exchange stops and root respiration fails.</p>
+<p>Most lawns begin dying underground long before blades show visible stress.</p>
 
-<h2>Nutrients exist in soil long before fertilizer</h2>
-<p>Soil stores nutrients on particle surfaces and organic matter. Grass accesses those nutrients only when roots and microbes are active.</p>
-<p>How this storage actually works is explained in <a href="/soil-fertilizer/how-soil-stores-nutrients.html">How Soil Stores Nutrients</a>.</p>
+<h2>Nutrients are useless without functioning soil</h2>
+<p>Soil already contains nutrients. Fertilizer does not create fertility. It only supplements what roots and microbes can already access. When roots lose oxygen or mobility, nutrients become biologically locked away.</p>
+<p>This is why fertilizing stressed lawns often accelerates decline instead of reversing it.</p>
 
-<h2>Soil is constantly moving and changing</h2>
-<p>Erosion, compaction, and biological activity alter soil over time. Slopes lose material downhill while flat areas accumulate pressure.</p>
-<p>This process explains why sloped lawns thin faster, as explained in <a href="/soil-fertilizer/why-sloped-lawns-lose-soil.html">Why Sloped Lawns Lose Soil</a>.</p>
+<h2>Soil constantly degrades unless conditions protect it</h2>
+<p>Traffic compresses soil. Rain impacts and seals the surface. Slopes move soil downhill. Biological activity reshapes structure over time. Lawn soil is never static.</p>
+<p>Without protection and recovery, structure degrades year after year.</p>
 
-<h2>Compaction changes soil into a barrier</h2>
-<p>When soil is compacted, pore space collapses and roots physically cannot expand. Water and air movement become unpredictable.</p>
-<p>What compaction does to root systems is explained in <a href="/soil-fertilizer/how-compaction-affects-roots.html">How Compaction Affects Roots</a>.</p>
+<h2>Compaction turns soil into a physical barrier</h2>
+<p>Compacted soil is not poor-quality soil. It is soil that roots physically cannot enter. Pore space collapses, oxygen movement stops, and roots flatten or fail outright.</p>
+<p>Once compaction reaches this stage, grass survival becomes conditional rather than reliable.</p>
 
-<h2>Fertilizer cannot replace soil function</h2>
-<p>Fertilizer adds nutrients but does not create pore space, oxygen flow, or water balance. Without functional soil, nutrients remain inaccessible.</p>
-<p>This misunderstanding is explained in <a href="/soil-fertilizer/what-fertilizer-does-and-does-not-do.html">What Fertilizer Does and Does Not Do</a>.</p>
+<h2>Fertilizer cannot replace structure</h2>
+<p>No product can create pore space, restore oxygen flow, or reopen collapsed soil from the surface. Nutrients without structure are inaccessible. Color without roots is cosmetic.</p>
+<p>This misunderstanding is at the core of most lawn care failure.</p>
 
-<h2>Soil health determines lawn lifespan</h2>
-<p>Grass survives as long as soil continues to support roots. When soil structure collapses, decline becomes inevitable regardless of care.</p>
-<p>Lawn appearance reflects soil condition more than maintenance effort.</p>
+<h2>Soil sets the lifespan of the lawn</h2>
+<p>Grass survives only as long as soil continues to support root regeneration. When structure degrades faster than it can recover, decline becomes inevitable regardless of maintenance effort.</p>
+<p>Lawns do not wear out. Their soil does.</p>
 
-<h2>Lawn soil is a system, not an input</h2>
-<p>Lawn soil is the operating system beneath the grass. Everything else depends on it functioning correctly.</p>
-<p>Understanding soil is the difference between managing symptoms and fixing causes.</p>
+<h2>Lawn soil is the operating system</h2>
+<p>Everything above ground is downstream of soil function. Watering, mowing, and fertilizing only work when the system underneath allows them to.</p>
+<p>Understanding soil is the difference between managing appearance and controlling outcomes.</p>
   </main>
 
   <footer class="site-footer">
