--- a/soil-fertilizer/why-soil-matters-more-than-grass-type.html
+++ b/soil-fertilizer/why-soil-matters-more-than-grass-type.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Soil Matters More Than Grass Type</title>
-  <meta name="description" content="Grass variety does not determine lawn success. Soil structure controls root survival, recovery speed, and whether any grass type can persist at all.">
+  <meta name="description" content="Grass type does not decide whether a lawn succeeds or fails. Soil condition determines whether any grass can survive, recover, and last.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/why-soil-matters-more-than-grass-type.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Why Soil Matters More Than Grass Type">
-  <meta name="twitter:description" content="Grass variety does not determine lawn success. Soil structure controls root survival, recovery speed, and whether any grass type can persist at all.">
+  <meta name="twitter:description" content="Grass type does not decide whether a lawn succeeds or fails. Soil condition determines whether any grass can survive, recover, and last.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Why Soil Matters More Than Grass Type">
-  <meta property="og:description" content="Grass variety does not determine lawn success. Soil structure controls root survival, recovery speed, and whether any grass type can persist at all.">
+  <meta property="og:description" content="Grass type does not decide whether a lawn succeeds or fails. Soil condition determines whether any grass can survive, recover, and last.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/why-soil-matters-more-than-grass-type.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,41 +56,45 @@
   <main class="container">
     <h1>Why Soil Matters More Than Grass Type</h1>
 
-<h2>Grass type does not control success</h2>
-<p>Lawns fail or thrive long before grass variety becomes relevant. Seed labels promise heat tolerance, shade tolerance, or fast recovery, but none of those traits matter if roots cannot survive in the soil they are planted into.</p>
-<p>Grass type only expresses its advantages when soil structure allows roots to grow, breathe, and regenerate.</p>
+<h2>Grass choice is not the deciding factor</h2>
+<p>Many lawn problems get blamed on the wrong grass type. People switch seed varieties expecting better results, only to watch the new grass struggle the same way the old one did.</p>
+<p>This happens because grass type does not control whether a lawn works. The soil underneath does.</p>
 
-<h2>Roots experience soil, not genetics</h2>
-<p>Grass blades reflect genetics. Roots respond to physics. Compaction, oxygen availability, moisture movement, and temperature buffering are decided entirely by soil conditions.</p>
-<p>When those conditions are hostile, even the most resilient grass types behave like weak ones.</p>
+<h2>Grass grows where soil allows it to</h2>
+<p>Grass does not grow because it was labeled drought tolerant or shade tolerant. It grows because its roots can spread, anchor, and stay alive in the soil.</p>
+<p>If the soil is hard, compacted, or constantly wet, no grass type can perform the way it is advertised.</p>
 
-<h2>Soil limits how grass responds to stress</h2>
-<p>Stress is inevitable. Heat, drought, mowing, and traffic all reduce energy reserves. Recovery depends on root depth, oxygen access, and the ability to replace damaged tissue.</p>
-<p>When soil restricts root growth, stress accumulates faster than grass can recover, regardless of species.</p>
+<h2>Roots decide how strong the lawn becomes</h2>
+<p>The visible part of grass only tells part of the story. What matters most is how deep and healthy the roots are.</p>
+<p>Roots only grow when soil lets them. When soil is tight or airless, roots stay shallow and weak no matter what grass you planted.</p>
 
-<h2>Mowing exposes soil weaknesses</h2>
-<p>Cutting grass short does not harm lawns by itself. It reveals whether soil can support rapid root recovery after leaf loss. When roots are shallow or oxygen-starved, mowing stress compounds immediately.</p>
-<p>This is why lawns decline rapidly after aggressive mowing, even when the same grass type performs well elsewhere under identical cutting heights, as explained in <a href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">What Happens If You Cut Grass Too Short</a>.</p>
+<h2>Stress reveals soil problems fast</h2>
+<p>Heat, drought, foot traffic, and mowing all stress grass. Healthy soil helps grass recover after stress. Poor soil makes every problem worse.</p>
+<p>This is why lawns with bad soil seem fine one week and suddenly fall apart the next.</p>
 
-<h2>Soil damage accumulates invisibly</h2>
-<p>Surface appearance hides underground change. Soil compacts gradually under foot traffic, equipment, and repeated use. Pore space collapses long before grass color shifts.</p>
-<p>Once compaction reaches a critical point, root systems fail abruptly instead of slowly.</p>
+<h2>Mowing problems often start below ground</h2>
+<p>Cutting grass shorter than usual does not automatically ruin a lawn. It becomes a problem when roots are already struggling.</p>
+<p>When soil is weak, grass cannot bounce back after mowing, which is why issues described in <a href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html">What Happens If You Cut Grass Too Short</a> show up faster on poor soil.</p>
 
-<h2>Traffic changes soil faster than grass can adapt</h2>
-<p>Grass types are not designed to evolve around physical barriers. Repeated pressure alters soil structure in ways roots cannot penetrate or repair.</p>
-<p>This mechanical damage explains why the same grass variety survives in one yard but collapses in another with similar climate and care, a pattern driven by <a href="/soil-fertilizer/how-traffic-affects-soil-health.html">how traffic affects soil health</a>.</p>
+<h2>Soil damage builds over time</h2>
+<p>Soil does not fail overnight. Walking, mowing, parking equipment, and regular use slowly press soil tighter and tighter.</p>
+<p>Grass often looks fine until roots suddenly cannot push through the soil anymore.</p>
 
-<h2>Grass selection cannot override physics</h2>
-<p>Choosing a different grass type does not restore pore space, increase oxygen diffusion, or reopen sealed soil. Genetics do not bypass physical constraints.</p>
-<p>When soil fails, changing grass becomes cosmetic rather than corrective.</p>
+<h2>Traffic hurts soil more than grass type can help</h2>
+<p>No grass variety is designed to handle repeated pressure from people, pets, or equipment without help from the soil.</p>
+<p>When traffic compresses soil, grass roots stop spreading, which explains patterns caused by <a href="/soil-fertilizer/how-traffic-affects-soil-health.html">how traffic affects soil health</a>.</p>
 
-<h2>Soil determines longevity, not appearance</h2>
-<p>Grass type influences color, texture, and growth habit. Soil determines lifespan. Lawns persist only as long as roots can continuously regenerate faster than damage accumulates.</p>
-<p>When soil degrades faster than it recovers, replacement becomes cyclical instead of durable.</p>
+<h2>Switching grass does not fix soil</h2>
+<p>Changing grass types does not loosen soil, improve drainage, or restore damaged ground.</p>
+<p>Without fixing soil conditions, new grass often fails faster than the old grass did.</p>
 
-<h2>Soil is the governing factor</h2>
-<p>Every grass type shares the same requirement: functional soil. When soil supports roots, most grasses succeed. When it does not, none do reliably.</p>
-<p>Understanding this hierarchy is the difference between managing symptoms and controlling outcomes.</p>
+<h2>Soil controls how long a lawn lasts</h2>
+<p>Grass type affects color, texture, and growth speed. Soil controls how long the lawn survives.</p>
+<p>When soil slowly degrades, lawns become harder to maintain year after year no matter how much seed or fertilizer is used.</p>
+
+<h2>Soil is the foundation that matters</h2>
+<p>Every lawn depends on soil first. When soil supports roots, many grass types can succeed.</p>
+<p>When soil fails, grass choice becomes a minor detail instead of a solution.</p>
   </main>
 
   <footer class="site-footer">
